--- a/html/lock_screen.html
+++ b/html/lock_screen.html
@@ -1,56 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <meta name="keyword" content="FlatLab, Dashboard, Bootstrap, Admin, Template, Theme, Responsive, Fluid, Retina">
-    <link rel="shortcut icon" href="img/favicon.png">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <meta name="keyword" content="FlatLab, Dashboard, Bootstrap, Admin, Template, Theme, Responsive, Fluid, Retina">
+  <link rel="shortcut icon" href="img/favicon.png">
 
-    <title>Lock Screen</title>
+  <title>Lock Screen</title>
 
-    <!-- Bootstrap core CSS -->
-<link href="bs3/css/bootstrap.min.css" rel="stylesheet">
-<!--<link href="bs3/rtl/css/bootstrap.min.css" rel="stylesheet"> -->
-    <link href="css/bootstrap-reset.css" rel="stylesheet">
-    <!--external css-->
-    <link href="font-awesome/css/font-awesome.css" rel="stylesheet" />
-    <!-- Custom styles for this template -->
-    <link href="css/style.css?1" rel="stylesheet">
-    <link href="css/style-responsive.css" rel="stylesheet" />
+  <!-- Bootstrap core CSS -->
+  <link href="bs3/css/bootstrap.min.css" rel="stylesheet">
+  <!--<link href="bs3/rtl/css/bootstrap.min.css" rel="stylesheet">
+  -->
+  <link href="css/bootstrap-reset.css" rel="stylesheet">
+  <!--external css-->
+  <link href="font-awesome/css/font-awesome.css" rel="stylesheet" />
+  <!-- Custom styles for this template -->
+  <link href="css/style.css?1" rel="stylesheet">
+  <link href="css/style-responsive.css" rel="stylesheet" />
 
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 tooltipss and media queries -->
-    <!--[if lt IE 9]>
-    <script src="js/html5shiv.js"></script>
-    <script src="js/respond.min.js"></script>
-    <![endif]-->
+  <!-- HTML5 shim and Respond.js IE8 support of HTML5 tooltipss and media queries -->
+  <!--[if lt IE 9]>
+  <script src="js/html5shiv.js"></script>
+  <script src="js/respond.min.js"></script>
+  <![endif]-->
 </head>
 
 <body class="lock-screen" onload="startTime()">
 
-    <div class="lock-wrapper">
+  <div class="lock-wrapper">
 
-        <div id="time"></div>
+    <div id="time"></div>
 
+    <div class="lock-box text-center">
+      <div class="lock-name">Jonathan Smith</div>
+      <img src="images/lock_thumb.jpg" alt="lock avatar"/>
+      <div class="lock-pwd">
+        <form role="form" class="form-inline" action="index.html">
+          <div class="form-group">
+            <input type="password" placeholder="Password" id="exampleInputPassword2" class="form-control lock-input">
+            <button class="btn btn-lock" type="submit"> <i class="fa fa-arrow-right"></i>
+            </button>
+          </div>
+        </form>
+      </div>
 
-        <div class="lock-box text-center">
-            <div class="lock-name">Jonathan Smith</div>
-            <img src="images/lock_thumb.jpg" alt="lock avatar"/>
-            <div class="lock-pwd">
-                <form role="form" class="form-inline" action="index.html">
-                    <div class="form-group">
-                        <input type="password" placeholder="Password" id="exampleInputPassword2" class="form-control lock-input">
-                        <button class="btn btn-lock" type="submit">
-                            <i class="fa fa-arrow-right"></i>
-                        </button>
-                    </div>
-                </form>
-            </div>
-
-        </div>
     </div>
-    <script>
+  </div>
+  <script>
         function startTime()
         {
             var today=new Date();
@@ -72,6 +71,5 @@
             }
             return i;
         }
-    </script>
-</body>
+    </script></body>
 </html>
