--- a/html/editable_table.html
+++ b/html/editable_table.html
@@ -277,13 +277,13 @@
             <li>
               <a href="index.html">
                 <i class="fa fa-dashboard"></i>
-                <span>Dashboard</span>
+                <span>داشبورد</span>
               </a>
             </li>
             <li class="sub-menu">
               <a href="javascript:;">
                 <i class="fa fa-laptop"></i>
-                <span>Layouts</span>
+                <span>طرح بندی</span>
               </a>
               <ul class="sub">
                 <li>
@@ -300,39 +300,36 @@
             <li class="sub-menu">
               <a href="javascript:;">
                 <i class="fa fa-book"></i>
-                <span>UI Elements</span>
+                <span>عناصر رابط کاربر</span>
               </a>
               <ul class="sub">
                 <li>
-                  <a href="general.html">General</a>
+                  <a href="general.html">عمومی</a>
                 </li>
                 <li>
-                  <a href="buttons.html">Buttons</a>
+                  <a href="buttons.html">دکمه ها</a>
                 </li>
                 <li>
-                  <a href="typography.html">Typography</a>
+                  <a href="typography.html">تایپوگرافی</a>                </li>
+                <li>
+                  <a href="widget.html">ویجت</a>
                 </li>
                 <li>
-                  <a href="widget.html">Widget</a>
+                  <a href="slider.html">اسلایدر</a>
                 </li>
                 <li>
-                  <a href="slider.html">Slider</a>
+                  <a href="tree_view.html">نمایش درختی</a>
                 </li>
                 <li>
-                  <a href="tree_view.html">Tree View</a>
+                  <a href="nestable.html">تو در تو</a>                </li>
+                <li>
+                  <a href="grids.html">شبکه بندی</a>
                 </li>
                 <li>
-                  <a href="nestable.html">Nestable</a>
+                  <a href="calendar.html">تقویم</a>
                 </li>
                 <li>
-                  <a href="grids.html">Grids</a>
-                </li>
-                <li>
-                  <a href="calendar.html">Calender</a>
-                </li>
-                <li>
-                  <a href="draggable_portlet.html">Draggable Portlet</a>
-                </li>
+                  <a href="draggable_portlet.html">جعبه های جابجا شونده</a>                </li>
               </ul>
             </li>
             <li>
@@ -344,50 +341,47 @@
             <li class="sub-menu">
               <a href="javascript:;" class="active">
                 <i class="fa fa-th"></i>
-                <span>Data Tables</span>
+                <span>جدول داده</span>
               </a>
               <ul class="sub">
                 <li>
-                  <a href="basic_table.html">Basic Table</a>
+                  <a href="basic_table.html">جدول پایه</a>
                 </li>
                 <li>
-                  <a href="responsive_table.html">Responsive Table</a>
-                </li>
+                  <a href="responsive_table.html">جدول واکنشگرا</a>                </li>
                 <li>
-                  <a href="dynamic_table.html">Dynamic Table</a>
+                  <a href="dynamic_table.html">جدول پویا</a>
                 </li>
                 <li class="active">
-                  <a href="editable_table.html">Editable Table</a>
+                  <a href="dynamic_table.html">جدول پویا</a>
                 </li>
               </ul>
             </li>
             <li class="sub-menu">
               <a href="javascript:;">
                 <i class="fa fa-tasks"></i>
-                <span>Form Components</span>
-              </a>
+                <span>فرم</span>              </a>
               <ul class="sub">
                 <li>
-                  <a href="form_component.html">Form Elements</a>
+                  <a href="form_component.html">عناصر فرم</a>
                 </li>
                 <li>
-                  <a href="advanced_form.html">Advanced Components</a>
+                  <a href="advanced_form.html">کامپوننت های پیشرفته</a>
                 </li>
                 <li>
-                  <a href="form_wizard.html">Form Wizard</a>
+                  <a href="form_wizard.html">فرم جادویی</a>                </li>
+                <li>
+                  <a href="form_validation.html">فرم اعتبار سنج</a>
                 </li>
                 <li>
-                  <a href="form_validation.html">Form Validation</a>
-                </li>
-                <li>
-                  <a href="file_upload.html">Muliple File Upload</a>
+                  <a href="file_upload.html">آپلود فایل چند گانه</a>
                 </li>
 
                 <li>
-                  <a href="dropzone.html">Dropzone</a>
+                  <a href="dropzone.html">منطقه رهایی</a>
                 </li>
                 <li>
-                  <a href="inline_editor.html">Inline Editor</a>
+                  <a href="inline_editor.html">ویرایشگر درون خطی</a>
                 </li>
 
               </ul>
@@ -395,24 +389,23 @@
             <li class="sub-menu">
               <a href="javascript:;">
                 <i class="fa fa-envelope"></i>
-                <span>Mail</span>
+                <span>ایمیل</span>
               </a>
               <ul class="sub">
                 <li>
-                  <a href="mail.html">Inbox</a>
+                  <a href="mail.html">صندوق ورودی</a>                </li>
+                <li>
+                  <a href="mail_compose.html">نوشتن ایمیل</a>
                 </li>
                 <li>
-                  <a href="mail_compose.html">Compose Mail</a>
-                </li>
-                <li>
-                  <a href="mail_view.html">View Mail</a>
+                  <a href="mail_view.html">نمایش ایمیل</a>
                 </li>
               </ul>
             </li>
             <li class="sub-menu">
               <a href="javascript:;">
                 <i class=" fa fa-bar-chart-o"></i>
-                <span>Charts</span>
+                <span>نمودار</span>
               </a>
               <ul class="sub">
                 <li>
@@ -432,59 +425,57 @@
             <li class="sub-menu">
               <a href="javascript:;">
                 <i class=" fa fa-bar-chart-o"></i>
-                <span>Maps</span>
-              </a>
+                <span>نقشه</span>              </a>
               <ul class="sub">
                 <li>
-                  <a href="google_map.html">Google Map</a>
+                  <a href="google_map.html">نقشه گوگل</a>
                 </li>
                 <li>
-                  <a href="vector_map.html">Vector Map</a>
+                  <a href="vector_map.html">نقشه برداری</a>
                 </li>
               </ul>
             </li>
             <li class="sub-menu">
               <a href="javascript:;">
                 <i class="fa fa-glass"></i>
-                <span>Extra</span>
+                <span>اضافی</span>
               </a>
               <ul class="sub">
                 <li>
-                  <a href="blank.html">Blank Page</a>
+                  <a href="blank.html">صفحه خالی</a>
                 </li>
                 <li>
-                  <a href="lock_screen.html">Lock Screen</a>
+                  <a href="lock_screen.html">قفل صفحه</a>
                 </li>
                 <li>
-                  <a href="profile.html">Profile</a>
+                  <a href="profile.html">پروفایل</a>
                 </li>
                 <li>
-                  <a href="invoice.html">Invoice</a>
+                  <a href="invoice.html">فاکتور</a>                </li>
+                <li>
+                  <a href="pricing_table.html">جدول قیمت</a>
                 </li>
                 <li>
-                  <a href="pricing_table.html">Pricing Table</a>
+                  <a href="timeline.html">گاهشمار</a>
                 </li>
                 <li>
-                  <a href="timeline.html">Timeline</a>
+                  <a href="gallery.html">گالری تصویری</a>
                 </li>
                 <li>
-                  <a href="gallery.html">Media Gallery</a>
+                  <a href="404.html">خطای 404</a>
                 </li>
                 <li>
-                  <a href="404.html">404 Error</a>
+                  <a href="500.html">خطای 500</a>
                 </li>
                 <li>
-                  <a href="500.html">500 Error</a>
-                </li>
-                <li>
-                  <a href="registration.html">Registration</a>
+                  <a href="registration.html">ثبت نام</a>
                 </li>
               </ul>
             </li>
             <li>
               <a href="login.html">
                 <i class="fa fa-user"></i>
-                <span>Login Page</span>
+                <span>صفحه ورود</span>
               </a>
             </li>
           </ul>
