--- a/html/language_switch.html
+++ b/html/language_switch.html
@@ -276,16 +276,16 @@
             <li>
                 <a href="index.html">
                     <i class="fa fa-dashboard"></i>
-                    <span>Dashboard</span>
+                    <span>داشبورد</span>
                 </a>
             </li>
             <li class="sub-menu">
                 <a href="javascript:;" class="active">
                     <i class="fa fa-laptop"></i>
-                    <span>Layouts</span>
+                   <span>طرح بندی</span>
                 </a>
                 <ul class="sub">
-                    <li><a href="boxed_page.html">Boxed Page</a></li>
+                    <li><a href="boxed_page.html">صفحه جعبه ای</a></li>
                     <li><a href="horizontal_menu.html">Horizontal Menu</a></li>
                     <li class="active"><a href="language_switch.html">Language Switch Bar</a></li>
                 </ul>
@@ -293,18 +293,18 @@
             <li class="sub-menu">
                 <a href="javascript:;">
                     <i class="fa fa-book"></i>
-                    <span>UI Elements</span>
+                    <span>عناصر رابط کاربر</span>
                 </a>
                 <ul class="sub">
-                    <li><a href="general.html">General</a></li>
-                    <li><a href="buttons.html">Buttons</a></li>
+                    <li><a href="general.html">عمومی</a></li>
+                    <li><a href="buttons.html">دکمه ها</a></li>
 <li><a href="typography.html">Typography</a></li>
-                    <li><a href="widget.html">Widget</a></li>
-                    <li><a href="slider.html">Slider</a></li>
-                    <li><a href="tree_view.html">Tree View</a></li>
-                    <li><a href="nestable.html">Nestable</a></li>
-                    <li><a href="grids.html">Grids</a></li>
-                    <li><a href="calendar.html">Calender</a></li>
+                    <li><a href="widget.html">ویجت</a></li>
+                    <li><a href="slider.html">اسلایدر</a></li>
+                    <li><a href="tree_view.html">نمایش درختی</a></li>
+                    <li><a href="nestable.html">تو در تو</a></li>
+                    <li><a href="grids.html">شبکه بندی</a></li>
+                    <li><a href="calendar.html">تقویم</a></li>
                     <li><a href="draggable_portlet.html">Draggable Portlet</a></li>
                 </ul>
             </li>
@@ -317,29 +317,28 @@
             <li class="sub-menu">
                 <a href="javascript:;">
                     <i class="fa fa-th"></i>
-                    <span>Data Tables</span>
+                    <span>جدول داده</span>
                 </a>
                 <ul class="sub">
-                    <li><a href="basic_table.html">Basic Table</a></li>
-                    <li><a href="responsive_table.html">Responsive Table</a></li>
-                    <li><a href="dynamic_table.html">Dynamic Table</a></li>
-                    <li><a href="editable_table.html">Editable Table</a></li>
+                    <li><a href="basic_table.html">جدول پایه</a></li>
+                    <li><a href="responsive_table.html">جدول واکنشگرا</a></li>
+                    <li><a href="dynamic_table.html">جدول پویا</a></li>
+                    <li><a href="dynamic_table.html">جدول پویا</a></li>
                 </ul>
             </li>
             <li class="sub-menu">
                 <a href="javascript:;">
                     <i class="fa fa-tasks"></i>
-                    <span>Form Components</span>
-                </a>
+                    <span>فرم</span>                </a>
                 <ul class="sub">
-                    <li><a href="form_component.html">Form Elements</a></li>
-                    <li><a href="advanced_form.html">Advanced Components</a></li>
-                    <li><a href="form_wizard.html">Form Wizard</a></li>
-                    <li><a href="form_validation.html">Form Validation</a></li>
-                    <li><a href="file_upload.html">Muliple File Upload</a></li>
+                    <li><a href="form_component.html">عناصر فرم</a></li>
+                    <li><a href="advanced_form.html">کامپوننت های پیشرفته</a></li>
+                    <li><a href="form_wizard.html">فرم جادویی</a></li>
+                    <li><a href="form_validation.html">فرم اعتبار سنج</a></li>
+                    <li><a href="file_upload.html">آپلود فایل چند گانه</a></li>
                     
-                    <li><a href="dropzone.html">Dropzone</a></li>
-                    <li><a href="inline_editor.html">Inline Editor</a></li>
+                    <li><a href="dropzone.html">منطقه رهایی</a></li>
+                    <li><a href="inline_editor.html">ویرایشگر درون خطی</a></li>
 
                 </ul>
             </li>
@@ -349,15 +348,15 @@
                     <span>Mail </span>
                 </a>
                 <ul class="sub">
-                    <li><a href="mail.html">Inbox</a></li>
-                    <li><a href="mail_compose.html">Compose Mail</a></li>
-                    <li><a href="mail_view.html">View Mail</a></li>
+                    <li><a href="mail.html">صندوق ورودی</a></li>
+                    <li><a href="mail_compose.html">نوشتن ایمیل</a></li>
+                    <li><a href="mail_view.html">نمایش ایمیل</a></li>
                 </ul>
             </li>
             <li class="sub-menu">
                 <a href="javascript:;">
                     <i class=" fa fa-bar-chart-o"></i>
-                    <span>Charts</span>
+                    <span>نمودار</span>
                 </a>
                 <ul class="sub">
                     <li><a href="morris.html">Morris</a></li>
@@ -369,34 +368,33 @@
             <li class="sub-menu">
                 <a href="javascript:;">
                     <i class=" fa fa-bar-chart-o"></i>
-                    <span>Maps</span>
-                </a>
+                    <span>نقشه</span>                </a>
                 <ul class="sub">
-                    <li><a href="google_map.html">Google Map</a></li>
-                    <li><a href="vector_map.html">Vector Map</a></li>
+                    <li><a href="google_map.html">نقشه گوگل</a></li>
+                    <li><a href="vector_map.html">نقشه برداری</a></li>
                 </ul>
             </li>
             <li class="sub-menu">
                 <a href="javascript:;">
                     <i class="fa fa-glass"></i>
-                    <span>Extra</span>
+                    <span>اضافی</span>
                 </a>
                 <ul class="sub">
-                    <li><a href="blank.html">Blank Page</a></li>
-                    <li><a href="lock_screen.html">Lock Screen</a></li>
-                    <li><a href="profile.html">Profile</a></li>
+                    <li><a href="blank.html">صفحه خالی</a></li>
+                    <li><a href="lock_screen.html">قفل صفحه</a></li>
+                    <li><a href="profile.html">پروفایل</a></li>
                     <li><a href="invoice.html">Invoice</a></li>
-                    <li><a href="pricing_table.html">Pricing Table</a></li>
-                    <li><a href="timeline.html">Timeline</a></li>                    
-<li><a href="gallery.html">Media Gallery</a></li><li><a href="404.html">404 Error</a></li>
-                    <li><a href="500.html">500 Error</a></li>
-                    <li><a href="registration.html">Registration</a></li>
+                    <li><a href="pricing_table.html">جدول قیمت</a></li>
+                    <li><a href="timeline.html">گاهشمار</a></li>                    
+<li><a href="gallery.html">گالری تصویری</a></li><li><a href="404.html">خطای 404</a></li>
+                    <li><a href="500.html">خطای 500</a></li>
+                    <li><a href="registration.html">ثبت نام</a></li>
                 </ul>
             </li>
             <li>
                 <a href="login.html">
                     <i class="fa fa-user"></i>
-                    <span>Login Page</span>
+                    <span>صفحه ورود</span>
                 </a>
             </li>
         </ul></div>        
