--- a/html/slider.html
+++ b/html/slider.html
@@ -494,7 +494,7 @@
           <div class="col-sm-12">
             <section class="panel">
               <header class="panel-heading">
-                Iron Slider
+                اسلایدر اهن
                 <span class="tools pull-left">
                   <a href="javascript:;" class="fa fa-times"></a>
                   <a href="javascript:;" class="fa fa-cog"></a>
@@ -532,7 +532,7 @@
                   <tr>
                     <td class="text-center ">
                       <input id="range_3" type="text" name="range_3" value="1000000;100000000" />
-                      <button class="btn btn-info btn-sm mtop10" id="updateLast">Update this slider</button>
+                      <button class="btn btn-info btn-sm mtop10" id="updateLast">اپدیت این اسلایدر</button>
                     </td>
                   </tr>
                 </table>
@@ -850,14 +850,14 @@
         $("#range_4").ionRangeSlider({
         type: "single",
         step: 100,
-        postfix: " light years",
+        postfix: " سال قبل",
         from: 55000,
         hideMinMax: true,
         hideFromTo: false
     });
         $("#range_3").ionRangeSlider({
         type: "double",
-        postfix: " miles",
+        postfix: " کیلو متر",
         step: 10000,
         from: 25000000,
         to: 35000000,
