--- a/html/nestable.html
+++ b/html/nestable.html
@@ -8,7 +8,7 @@
   <meta name="author" content="ThemeBucket">
   <link rel="shortcut icon" href="images/favicon.png">
 
-  <title>Nestable</title>
+  <title>تو در تو</title>
 
   <!--Core CSS -->
   <link href="bs3/css/bootstrap.min.css" rel="stylesheet">
@@ -528,44 +528,44 @@
                 <div class="dd" id="nestable_list_1">
                   <ol class="dd-list">
                     <li class="dd-item" data-id="1">
-                      <div class="dd-handle">Item 1</div>
+                      <div class="dd-handle">آیتم 1</div>
                     </li>
                     <li class="dd-item" data-id="2">
-                      <div class="dd-handle">Item 2</div>
+                      <div class="dd-handle">آیتم 2</div>
                       <ol class="dd-list">
                         <li class="dd-item" data-id="3">
-                          <div class="dd-handle">Item 3</div>
+                          <div class="dd-handle">آیتم 3</div>
                         </li>
                         <li class="dd-item" data-id="4">
-                          <div class="dd-handle">Item 4</div>
+                          <div class="dd-handle">آیتم 4</div>
                         </li>
                         <li class="dd-item" data-id="5">
-                          <div class="dd-handle">Item 5</div>
+                          <div class="dd-handle">آیتم 5</div>
                           <ol class="dd-list">
                             <li class="dd-item" data-id="6">
-                              <div class="dd-handle">Item 6</div>
+                              <div class="dd-handle">آیتم 6</div>
                             </li>
                             <li class="dd-item" data-id="7">
-                              <div class="dd-handle">Item 7</div>
+                              <div class="dd-handle">آیتم 7</div>
                             </li>
                             <li class="dd-item" data-id="8">
-                              <div class="dd-handle">Item 8</div>
+                              <div class="dd-handle">آیتم 8</div>
                             </li>
                           </ol>
                         </li>
                         <li class="dd-item" data-id="9">
-                          <div class="dd-handle">Item 9</div>
+                          <div class="dd-handle">آیتم 9</div>
                         </li>
                         <li class="dd-item" data-id="10">
-                          <div class="dd-handle">Item 10</div>
+                          <div class="dd-handle">آیتم 10</div>
                         </li>
                       </ol>
                     </li>
                     <li class="dd-item" data-id="11">
-                      <div class="dd-handle">Item 11</div>
+                      <div class="dd-handle">آیتم 11</div>
                     </li>
                     <li class="dd-item" data-id="12">
-                      <div class="dd-handle">Item 12</div>
+                      <div class="dd-handle">آیتم 12</div>
                     </li>
                   </ol>
                 </div>
@@ -587,22 +587,22 @@
                 <div class="dd" id="nestable_list_2">
                   <ol class="dd-list">
                     <li class="dd-item" data-id="13">
-                      <div class="dd-handle">Item 13</div>
+                      <div class="dd-handle">آیتم 13</div>
                     </li>
                     <li class="dd-item" data-id="14">
-                      <div class="dd-handle">Item 14</div>
+                      <div class="dd-handle">آیتم 14</div>
                     </li>
                     <li class="dd-item" data-id="15">
-                      <div class="dd-handle">Item 15</div>
+                      <div class="dd-handle">آیتم 15</div>
                       <ol class="dd-list">
                         <li class="dd-item" data-id="16">
-                          <div class="dd-handle">Item 16</div>
+                          <div class="dd-handle">آیتم 16</div>
                         </li>
                         <li class="dd-item" data-id="17">
-                          <div class="dd-handle">Item 17</div>
+                          <div class="dd-handle">آیتم 17</div>
                         </li>
                         <li class="dd-item" data-id="18">
-                          <div class="dd-handle">Item 18</div>
+                          <div class="dd-handle">آیتم 18</div>
                         </li>
                       </ol>
                     </li>
@@ -628,27 +628,27 @@
                   <ol class="dd-list">
                     <li class="dd-item dd3-item" data-id="13">
                       <div class="dd-handle dd3-handle"></div>
-                      <div class="dd3-content">Item 13</div>
+                      <div class="dd3-content">آیتم 13</div>
                     </li>
                     <li class="dd-item dd3-item" data-id="14">
                       <div class="dd-handle dd3-handle"></div>
-                      <div class="dd3-content">Item 14</div>
+                      <div class="dd3-content">آیتم 14</div>
                     </li>
                     <li class="dd-item dd3-item" data-id="15">
                       <div class="dd-handle dd3-handle"></div>
-                      <div class="dd3-content">Item 15</div>
+                      <div class="dd3-content">آیتم 15</div>
                       <ol class="dd-list">
                         <li class="dd-item dd3-item" data-id="16">
                           <div class="dd-handle dd3-handle"></div>
-                          <div class="dd3-content">Item 16</div>
+                          <div class="dd3-content">آیتم 16</div>
                         </li>
                         <li class="dd-item dd3-item" data-id="17">
                           <div class="dd-handle dd3-handle"></div>
-                          <div class="dd3-content">Item 17</div>
+                          <div class="dd3-content">آیتم 17</div>
                         </li>
                         <li class="dd-item dd3-item" data-id="18">
                           <div class="dd-handle dd3-handle"></div>
-                          <div class="dd3-content">Item 18</div>
+                          <div class="dd3-content">آیتم 18</div>
                         </li>
                       </ol>
                     </li>
