--- a/html/calendar.html
+++ b/html/calendar.html
@@ -8,7 +8,7 @@
   <meta name="author" content="ThemeBucket">
   <link rel="shortcut icon" href="images/favicon.png">
 
-  <title>Calendar</title>
+  <title>تقویم</title>
 
   <!--Core CSS -->
   <link href="bs3/css/bootstrap.min.css" rel="stylesheet">
@@ -160,9 +160,9 @@
                     <img alt="avatar" src="images/avatar-mini-3.jpg"></span>
                   <span class="subject">
                     <span class="from">Tasi sam</span>
-                    <span class="time">2 days ago</span>
+                    <span class="time">2 روز قبل</span>
                   </span>
-                  <span class="message">This is an example msg.</span>
+                  <span class="message">این یک پیغام تست است.</span>
                 </a>
               </li>
               <li>
@@ -490,7 +490,7 @@
         <!-- page start-->
         <section class="panel">
           <header class="panel-heading">
-            Draggable Calendar
+            تقویم جابه جا شونده
             <span class="tools pull-left">
               <a href="javascript:;" class="fa fa-times"></a>
               <a href="javascript:;" class="fa fa-cog"></a>
@@ -504,21 +504,21 @@
                 <div id="calendar" class="has-toolbar"></div>
               </aside>
               <aside class="col-lg-3">
-                <h4 class="drg-event-title">Draggable Events</h4>
+                <h4 class="drg-event-title">رویداد های جابجا شونده</h4>
                 <div id='external-events'>
-                  <div class='external-event label label-primary'>My Event 1</div>
-                  <div class='external-event label label-success'>My Event 2</div>
-                  <div class='external-event label label-info'>My Event 3</div>
-                  <div class='external-event label label-inverse'>My Event 4</div>
-                  <div class='external-event label label-warning'>My Event 5</div>
-                  <div class='external-event label label-danger'>My Event 6</div>
-                  <div class='external-event label label-default'>My Event 7</div>
-                  <div class='external-event label label-primary'>My Event 8</div>
-                  <div class='external-event label label-info'>My Event 9</div>
-                  <div class='external-event label label-success'>My Event 10</div>
+                  <div class='external-event label label-primary'>رویداد 1</div>
+                  <div class='external-event label label-success'>رویداد 2</div>
+                  <div class='external-event label label-info'>رویداد 3</div>
+                  <div class='external-event label label-inverse'>رویداد 4</div>
+                  <div class='external-event label label-warning'>رویداد 5</div>
+                  <div class='external-event label label-danger'>رویداد 6</div>
+                  <div class='external-event label label-default'>رویداد 7</div>
+                  <div class='external-event label label-primary'>رویداد 8</div>
+                  <div class='external-event label label-info'>رویداد 9</div>
+                  <div class='external-event label label-success'>رویداد 10</div>
                   <p class="border-top drp-rmv">
                     <input type='checkbox' id='drop-remove' />
-                    remove after drop
+                    حذف بعد از رها شدن
                   </p>
                 </div>
               </aside>
@@ -727,7 +727,7 @@
                     <i class="fa fa-clock-o"></i>
                   </div>
                   <div class="rsn-details ">
-                    <p class="text-muted">1 day ago</p>
+                    <p class="text-muted">1 روز قبل</p>
                     <p>
                       <a href="#">Jim Doe</a>
                       Purchased new equipments for zonal office setup
