--- a/html/draggable_portlet.html
+++ b/html/draggable_portlet.html
@@ -8,7 +8,7 @@
   <meta name="author" content="ThemeBucket">
   <link rel="shortcut icon" href="images/favicon.png">
 
-  <title>Draggable Portlet</title>
+  <title>جعبه های قابل جابجایی</title>
 
   <!--Core CSS -->
   <link href="bs3/css/bootstrap.min.css" rel="stylesheet">
