--- a/html/grids.html
+++ b/html/grids.html
@@ -8,7 +8,7 @@
   <meta name="author" content="ThemeBucket">
   <link rel="shortcut icon" href="images/favicon.png">
 
-  <title>Grids</title>
+  <title>شبکه بندی</title>
 
   <!--Core CSS -->
   <link href="bs3/css/bootstrap.min.css" rel="stylesheet">
@@ -486,7 +486,7 @@
       <section class=" wrapper site-min-height">
         <div class="row">
           <div class="col-lg-12">
-            <p class="hd-title">Base on Bootstrap grid system.</div>
+            <p class="hd-title">بر اساس شبکه بندی بوت استرپ</div>
             <div class="col-lg-12">
               <section class="panel">
                 <div class="panel-body">col-lg-12</div>
@@ -579,7 +579,7 @@
           </div>
           <div class="row">
             <div class="col-lg-12">
-              <p class="hd-title">Mobile, tablet, and desktop</p>
+              <p class="hd-title">موبایل ؛ تبلت</p>
             </div>
           </div>
           <div class="row">
