--- a/html/horizontal_menu.html
+++ b/html/horizontal_menu.html
@@ -113,7 +113,7 @@
             <li class="dropdown">
               <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                 <img alt="" src="images/avatar1_small.jpg">
-                <span class="username">John Doe</span>
+                <span class="username">امیر</span>
                 <b class="caret"></b>
               </a>
               <ul class="dropdown-menu extended logout">
