--- a/html/dropzone.html
+++ b/html/dropzone.html
@@ -236,7 +236,7 @@
           <li class="dropdown">
             <a data-toggle="dropdown" class="dropdown-toggle" href="#">
               <img alt="" src="images/avatar1_small.jpg">
-              <span class="username">John Doe</span> <b class="caret"></b>
+              <span class="username">امیر</span> <b class="caret"></b>
             </a>
             <ul class="dropdown-menu extended logout">
               <li>
@@ -633,7 +633,7 @@
                   </div>
                   <div class="user-details">
                     <h4>
-                      <a href="#">John Doe</a>
+                      <a href="#">امیر</a>
                     </h4>
                     <p>Away from Desk</p>
                   </div>
