--- a/html/language_switch.html
+++ b/html/language_switch.html
@@ -249,7 +249,7 @@
         <li class="dropdown">
             <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                 <img alt="" src="images/avatar1_small.jpg">
-                <span class="username">John Doe</span>
+                <span class="username">امیر</span>
                 <b class="caret"></b>
             </a>
             <ul class="dropdown-menu extended logout">
@@ -551,7 +551,7 @@
                     <a href="#"><img src="images/chat-avatar2.jpg" alt=""></a>
                 </div>
                 <div class="user-details">
-                    <h4><a href="#">John Doe</a></h4>
+                    <h4><a href="#">امیر</a></h4>
                     <p>
                         Away from Desk
                     </p>
