--- a/html/404.html
+++ b/html/404.html
@@ -36,11 +36,11 @@
       <h1>
         <img src="images/404.png" alt=""></h1>
       <div class="error-desk">
-        <h2>page not found</h2>
-        <p class="nrml-txt">We Couldn’t Find This Page</p>
+        <h2>صفحه مورد نظر یافت نشد</h2>
+        <p class="nrml-txt">ما نتوانستیم صفحه شما را پیدا کنیم</p>
       </div>
       <a href="index.html" class="back-btn"> <i class="fa fa-home"></i>
-        Back To Home
+        برگشت به خانه
       </a>
     </section>
 
