--- a/html/login.html
+++ b/html/login.html
@@ -8,7 +8,7 @@
   <meta name="author" content="ThemeBucket">
   <link rel="shortcut icon" href="images/favicon.png">
 
-  <title>Login</title>
+  <title>ورود</title>
 
   <!--Core CSS -->
   <link href="bs3/css/bootstrap.min.css" rel="stylesheet">
@@ -38,24 +38,24 @@
   <div class="container">
 
     <form class="form-signin" action="index.html">
-      <h2 class="form-signin-heading">sign in now</h2>
+      <h2 class="form-signin-heading">ورود به برنامه </h2>
       <div class="login-wrap">
         <div class="user-login-info">
-          <input type="text" class="form-control" placeholder="User ID" autofocus>
-          <input type="password" class="form-control" placeholder="Password"></div>
+          <input type="text" class="form-control" placeholder="نام کاربری" autofocus>
+          <input type="password" class="form-control" placeholder="کلمه عبور"></div>
         <label class="checkbox">
           <input type="checkbox" value="remember-me">
-          Remember me
-          <span class="pull-right">
-            <a data-toggle="modal" href="#myModal">Forgot Password?</a>
+          مرا به خاطر داشته باش
+          <span class="pull-left">
+            <a data-toggle="modal" href="#myModal">فراموشی رمز عبور</a>
 
           </span>
         </label>
-        <button class="btn btn-lg btn-login btn-block" type="submit">Sign in</button>
+        <button class="btn btn-lg btn-login btn-block" type="submit">ورود</button>
 
         <div class="registration">
-          Don't have an account yet?
-          <a class="" href="registration.html">Create an account</a>
+          هنوز شما اکانتی ندارید؟
+          <a class="" href="registration.html">ایجاد یک اکانت</a>
         </div>
 
       </div>
