--- a/html/mail.html
+++ b/html/mail.html
@@ -498,7 +498,7 @@
                     <a href="mail.html">
                       <i class="fa fa-inbox"></i>
                       Inbox
-                      <span class="label label-danger pull-right inbox-notification">9</span>
+                      <span class="label label-danger pull-left inbox-notification">9</span>
                     </a>
                   </li>
                   <li>
@@ -517,7 +517,7 @@
                     <a href="#">
                       <i class="fa fa-file-text-o"></i>
                       Drafts
-                      <span class="label label-info pull-right inbox-notification">123</span>
+                      <span class="label label-info pull-left inbox-notification">123</span>
                     </a>
                   </a>
                 </li>
@@ -595,7 +595,7 @@
             <header class="panel-heading wht-bg">
               <h4 class="gen-case">
                 Inbox (34)
-                <form action="#" class="pull-right mail-src-position">
+                <form action="#" class="pull-left mail-src-position">
                   <div class="input-append">
                     <input type="text" class="form-control " placeholder="Search Mail"></div>
                 </form>
