--- a/html/mail_compose.html
+++ b/html/mail_compose.html
@@ -518,7 +518,7 @@
                     <a href="#">
                       <i class="fa fa-file-text-o"></i>
                       Drafts
-                      <span class="label label-info pull-right inbox-notification">123</span>
+                      <span class="label label-info pull-left inbox-notification">123</span>
                     </a>
                   </a>
                 </li>
@@ -596,14 +596,14 @@
             <header class="panel-heading wht-bg">
               <h4 class="gen-case">
                 Compose Mail
-                <form action="#" class="pull-right mail-src-position">
+                <form action="#" class="pull-left mail-src-position">
                   <div class="input-append">
                     <input type="text" class="form-control " placeholder="Search Mail"></div>
                 </form>
               </h4>
             </header>
             <div class="panel-body">
-              <div class="compose-btn pull-right">
+              <div class="compose-btn pull-left">
                 <button class="btn btn-primary btn-sm">
                   <i class="fa fa-check"></i>
                   Send
