--- a/html/registration.html
+++ b/html/registration.html
@@ -8,7 +8,7 @@
   <meta name="author" content="ThemeBucket">
   <link rel="shortcut icon" href="images/favicon.png">
 
-  <title>Login</title>
+  <title>ثبت نام</title>
 
   <!--Core CSS -->
   <link href="bs3/css/bootstrap.min.css" rel="stylesheet">
@@ -37,35 +37,35 @@
   <div class="container">
 
     <form class="form-signin" action="index.html">
-      <h2 class="form-signin-heading">registration now</h2>
+      <h2 class="form-signin-heading">ثبت نام</h2>
       <div class="login-wrap">
-        <p>Enter your personal details below</p>
-        <input type="text" class="form-control" placeholder="Full Name" autofocus>
-        <input type="text" class="form-control" placeholder="Address" autofocus>
-        <input type="text" class="form-control" placeholder="Email" autofocus>
-        <input type="text" class="form-control" placeholder="City/Town" autofocus>
+        <p>لطفا اطلاعات زیر را تکمیل کنید</p>
+        <input type="text" class="form-control" placeholder="نام کامل" autofocus>
+        <input type="text" class="form-control" placeholder="آدرس" autofocus>
+        <input type="text" class="form-control" placeholder="ایمیل" autofocus>
+        <input type="text" class="form-control" placeholder="شهر" autofocus>
         <div class="radios">
           <label class="label_radio col-lg-6 col-sm-6" for="radio-01">
             <input name="sample-radio" id="radio-01" value="1" type="radio" checked />
-            Male
+            مرد
           </label>
           <label class="label_radio col-lg-6 col-sm-6" for="radio-02">
             <input name="sample-radio" id="radio-02" value="1" type="radio" />
-            Female
+            زن
           </label>
         </div>
 
-        <p>Enter your account details below</p>
-        <input type="text" class="form-control" placeholder="User Name" autofocus>
-        <input type="password" class="form-control" placeholder="Password">
-        <input type="password" class="form-control" placeholder="Re-type Password">
+        <p>جزییات اکانت خود را وارد کنید</p>
+        <input type="text" class="form-control" placeholder="نام کاربری" autofocus>
+        <input type="password" class="form-control" placeholder="رمز عبور">
+        <input type="password" class="form-control" placeholder="تکرار رمز عبور">
         <label class="checkbox">
-          <input type="checkbox" value="agree this condition">I agree to the Terms of Service and Privacy Policy</label>
-        <button class="btn btn-lg btn-login btn-block" type="submit">Submit</button>
+          <input type="checkbox" value="agree this condition">موافقت با شرایط</label>
+        <button class="btn btn-lg btn-login btn-block" type="submit">تایید</button>
 
         <div class="registration">
-          Already Registered.
-          <a class="" href="login.html">Login</a>
+          قبلا ثبت نام کرده اید؟
+          <a class="" href="login.html">ورود</a>
         </div>
 
       </div>
